Refactor 04 for multiple synthetic networks

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -278,7 +278,7 @@
     "    vertex_size=vertex_sizes,\n",
     "    vertex_color=vertex_colors,\n",
     "    link_width=0.3,\n",
-    "    link_color=\"#444444\",\n",
+    "    link_color=PLOTPARAM[\"color\"][\"neutral\"],\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=1)\n",
     "plot_dk_inset(fig, allloops_bound)\n",
