--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -53,8 +53,8 @@
     "load_data = True  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
-    "size = 8  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
-    "linklength = 1000  # m"
+    "size = 5  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
+    "linklength = 5000  # m"
    ]
   },
   {
@@ -108,7 +108,7 @@
     "        alllooplengths = pickle.load(f)\n",
     "        allloopnumnodes = pickle.load(f)\n",
     "        allloopmaxslopes = pickle.load(f)\n",
-    "        Gnx = pickle.load(f)\n",
+    "        Gnx_DK = pickle.load(f)\n",
     "        LOOP_NUMNODE_BOUND = pickle.load(f)\n",
     "        nodes_id = pickle.load(f)\n",
     "        nodes_coords = pickle.load(f)\n",
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degree_hist = nx.degree_histogram(Gnx)\n",
+    "degree_hist = nx.degree_histogram(Gnx_DK)\n",
     "print(list(range(len(degree_hist))))\n",
     "print(degree_hist)\n",
     "print(str(round(100 * degree_hist[3] / sum(degree_hist))) + \"% of nodes have degree 3.\")"
@@ -184,63 +184,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e27e0991-5ac5-4fba-8415-602f244d728b",
+   "id": "6325185d-c32f-4c3a-9320-ebc982215b9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gnx_tri = nx.triangular_lattice_graph(size, size)\n",
-    "nx.set_edge_attributes(Gnx_tri, linklength, name=\"weight\")\n",
-    "\n",
-    "Gnx_grid = nx.grid_2d_graph(size, size)\n",
-    "pos = dict(zip(Gnx_grid, Gnx_grid))  # Source: https://stackoverflow.com/a/37106552\n",
-    "nx.set_node_attributes(Gnx_grid, pos, \"pos\")\n",
-    "nx.set_edge_attributes(Gnx_grid, linklength, name=\"weight\")\n",
-    "\n",
-    "# To do: Add staggered grid (all degree 3 nodes)\n",
-    "\n",
-    "Gnx_hex = nx.hexagonal_lattice_graph(size, size)\n",
-    "nx.set_edge_attributes(Gnx_hex, linklength, name=\"weight\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bda828a1-9fda-4d2a-b158-f3e416d20cd8",
-   "metadata": {},
-   "source": [
-    "Scale by linklength:"
+    "Gnx_synth = {\n",
+    "    \"tri\": {\"constructor\": nx.triangular_lattice_graph},\n",
+    "    \"grid\": {\"constructor\": nx.grid_2d_graph},\n",
+    "    # To do: Add staggered grid (all degree 3 nodes)\n",
+    "    \"hex\": {\"constructor\": nx.hexagonal_lattice_graph},\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb9690b-73b8-40e7-8c18-747b9a996568",
+   "id": "e27e0991-5ac5-4fba-8415-602f244d728b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.set_node_attributes(\n",
-    "    Gnx_tri,\n",
-    "    {\n",
-    "        k: (linklength * v[0], linklength * v[1])\n",
-    "        for (k, v) in nx.get_node_attributes(Gnx_tri, \"pos\").items()\n",
-    "    },\n",
-    "    \"pos\",\n",
-    ")\n",
-    "nx.set_node_attributes(\n",
-    "    Gnx_grid,\n",
-    "    {\n",
-    "        k: (linklength * v[0], linklength * v[1])\n",
-    "        for (k, v) in nx.get_node_attributes(Gnx_grid, \"pos\").items()\n",
-    "    },\n",
-    "    \"pos\",\n",
-    ")\n",
-    "nx.set_node_attributes(\n",
-    "    Gnx_hex,\n",
-    "    {\n",
-    "        k: (linklength * v[0], linklength * v[1])\n",
-    "        for (k, v) in nx.get_node_attributes(Gnx_hex, \"pos\").items()\n",
-    "    },\n",
-    "    \"pos\",\n",
-    ")"
+    "for gtype in Gnx_synth:\n",
+    "    Gnx_synth[gtype][\"Gnx\"] = Gnx_synth[gtype][\"constructor\"](size, size)\n",
+    "    if gtype == \"grid\":\n",
+    "        pos = dict(\n",
+    "            zip(Gnx_synth[gtype][\"Gnx\"], Gnx_synth[gtype][\"Gnx\"])\n",
+    "        )  # Source: https://stackoverflow.com/a/37106552\n",
+    "        nx.set_node_attributes(Gnx_synth[gtype][\"Gnx\"], pos, \"pos\")\n",
+    "    nx.set_edge_attributes(Gnx_synth[gtype][\"Gnx\"], linklength, name=\"weight\")\n",
+    "\n",
+    "    # Scale by linklength\n",
+    "    nx.set_node_attributes(\n",
+    "        Gnx_synth[gtype][\"Gnx\"],\n",
+    "        {\n",
+    "            k: (linklength * v[0], linklength * v[1])\n",
+    "            for (k, v) in nx.get_node_attributes(Gnx_synth[gtype][\"Gnx\"], \"pos\").items()\n",
+    "        },\n",
+    "        \"pos\",\n",
+    "    )\n",
+    "\n",
+    "    # momepy format\n",
+    "    Gnx_synth[gtype][\"nodes\"], Gnx_synth[gtype][\"links\"] = synthnx_to_momepy(\n",
+    "        Gnx_synth[gtype][\"Gnx\"]\n",
+    "    )"
    ]
   },
   {
@@ -250,51 +235,149 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
+    "if debug:\n",
+    "    fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
+    "    for i, gtype in enumerate(Gnx_synth):\n",
+    "        nx.draw(\n",
+    "            Gnx_synth[gtype][\"Gnx\"],\n",
+    "            pos=nx.get_node_attributes(Gnx_synth[gtype][\"Gnx\"], \"pos\"),\n",
+    "            ax=axs[i],\n",
+    "            node_size=8,\n",
+    "        )\n",
     "\n",
-    "nx.draw(Gnx_tri, pos=nx.get_node_attributes(Gnx_tri, \"pos\"), ax=axs[0], node_size=8)\n",
-    "nx.draw(Gnx_grid, pos=nx.get_node_attributes(Gnx_grid, \"pos\"), ax=axs[1], node_size=8)\n",
-    "# To do: Add staggered grid (all degree 3 nodes)\n",
-    "nx.draw(Gnx_hex, pos=nx.get_node_attributes(Gnx_hex, \"pos\"), ax=axs[2], node_size=8)"
+    "fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
+    "for i, gtype in enumerate(Gnx_synth):\n",
+    "    Gnx_synth[gtype][\"nodes\"].plot(ax=axs[i])\n",
+    "    Gnx_synth[gtype][\"links\"].plot(ax=axs[i])\n",
+    "    axs[i].set_axis_off()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e50d5a2f-968f-42cc-aa16-90aa4a855ef9",
+   "id": "1c51bca5-ce82-493b-8f8f-11ee78758b48",
    "metadata": {},
    "source": [
-    "Make it momepy: copy \"pos\" to the geometry (as Point)"
+    "## Get all loops"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3769509c-a197-4aff-8188-33ebb2328c9c",
+   "id": "50f28da0-62f8-45a9-a3dd-b90d929816a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gnx_tri_nodes, Gnx_tri_links = synthnx_to_momepy(Gnx_tri)\n",
-    "Gnx_grid_nodes, Gnx_grid_links = synthnx_to_momepy(Gnx_grid)\n",
-    "Gnx_hex_nodes, Gnx_hex_links = synthnx_to_momepy(Gnx_hex)"
+    "gtype = \"tri\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84908fea-9356-426c-8879-ef6652329e07",
+   "id": "539d8d66-4d0f-4e4e-a346-d329b0f379f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
-    "Gnx_tri_nodes.plot(ax=axs[0])\n",
-    "Gnx_tri_links.plot(ax=axs[0])\n",
-    "axs[0].set_axis_off()\n",
-    "Gnx_grid_nodes.plot(ax=axs[1])\n",
-    "Gnx_grid_links.plot(ax=axs[1])\n",
-    "axs[1].set_axis_off()\n",
-    "Gnx_hex_nodes.plot(ax=axs[2])\n",
-    "Gnx_hex_links.plot(ax=axs[2])\n",
-    "axs[2].set_axis_off()"
+    "Gnx = Gnx_synth[gtype][\"Gnx\"]\n",
+    "Gnx_nodes = Gnx_synth[gtype][\"nodes\"]\n",
+    "Gnx_links = Gnx_synth[gtype][\"links\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "286ae0ca-2095-4ea8-a938-36a4c3c2611b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get all loops, meaning a loop ABCA is counted also as ABCA, BCAB, and CABC\n",
+    "allloops = {}\n",
+    "nodes_done = set()\n",
+    "numloops = 0\n",
+    "allloops_generator = nx.simple_cycles(\n",
+    "    Gnx_synth[gtype][\"Gnx\"], length_bound=LOOP_NUMNODE_BOUND\n",
+    ")  # length refers to number of nodes\n",
+    "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
+    "    sourcenode = c[0]\n",
+    "    c_length = get_loop_length(c)\n",
+    "    # LOOP_LENGTH_BOUND is 0 for no limit, or a number (meters)\n",
+    "    if not LOOP_LENGTH_BOUND or c_length * MPERUNIT <= LOOP_LENGTH_BOUND:\n",
+    "        for sourcenode in c:\n",
+    "            numloops += 1\n",
+    "            if sourcenode in nodes_done:\n",
+    "                allloops[sourcenode][\"loops\"].append(c)\n",
+    "                allloops[sourcenode][\"lengths\"].append(c_length)\n",
+    "                allloops[sourcenode][\"numnodes\"].append(len(c))\n",
+    "            else:\n",
+    "                allloops[sourcenode] = {\n",
+    "                    \"loops\": [c],\n",
+    "                    \"lengths\": [c_length],\n",
+    "                    \"numnodes\": [len(c)],\n",
+    "                }\n",
+    "                nodes_done.add(sourcenode)\n",
+    "if LOOP_LENGTH_BOUND:\n",
+    "    llb_string = \" and length bound \" + str(LOOP_LENGTH_BOUND) + \"m\"\n",
+    "else:\n",
+    "    llb_string = \"\"\n",
+    "print(\n",
+    "    \"Found \"\n",
+    "    + str(numloops)\n",
+    "    + \" loops for number of nodes bound \"\n",
+    "    + str(LOOP_NUMNODE_BOUND)\n",
+    "    + llb_string\n",
+    ")\n",
+    "Gnx_synth[gtype][\"alloops\"] = allloops\n",
+    "Gnx_synth[gtype][\"numloops\"] = numloops\n",
+    "\n",
+    "\n",
+    "allloops_bound = {}\n",
+    "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
+    "    try:\n",
+    "        lengths_this = np.array(allloops[sourcenode][\"lengths\"] * MPERUNIT)\n",
+    "        mask_this = (lengths_this >= SCENARIO[SCENARIOID][\"looplength_min\"]) & (\n",
+    "            lengths_this <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "        )\n",
+    "        allloops_bound[sourcenode] = mask_node(\n",
+    "            allloops[sourcenode], mask_this, [\"loops\", \"lengths\", \"numnodes\"]\n",
+    "        )\n",
+    "    except:  # Account for 0 loop nodes\n",
+    "        allloops_bound[sourcenode] = {}\n",
+    "Gnx_synth[gtype][\"allloops_bound\"] = allloops_bound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9337e769-3073-44a4-aba7-b9542efc2fce",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Plot all bounded loops\n",
+    "vertex_size, vertex_color = get_vertex_plotinfo(Gnx_synth[gtype][\"allloops_bound\"])\n",
+    "\n",
+    "fig = plt.figure(\n",
+    "    figsize=(0.3 * 640 / PLOTPARAM[\"dpi\"], 0.3 * 640 / PLOTPARAM[\"dpi\"]),\n",
+    "    dpi=PLOTPARAM[\"dpi\"],\n",
+    ")\n",
+    "ax = fig.add_axes(\n",
+    "    [-0.03, -0.03, 1.06, 1.06]\n",
+    ")  # negative because plot() introduces a padding\n",
+    "if Gnx_synth[gtype][\"nodes\"] is not None:\n",
+    "    Gnx_synth[gtype][\"nodes\"].plot(\n",
+    "        ax=ax,\n",
+    "        zorder=1,\n",
+    "        markersize=vertex_size,\n",
+    "        alpha=1,\n",
+    "        color=vertex_color,\n",
+    "        edgecolor=PLOTPARAM[\"color\"][\"neutral\"],\n",
+    "        linewidth=0.6,\n",
+    "    )\n",
+    "Gnx_synth[gtype][\"links\"].plot(\n",
+    "    ax=ax, zorder=0, linewidth=0.3, color=PLOTPARAM[\"color\"][\"neutral\"]\n",
+    ")\n",
+    "\n",
+    "ax.set_axis_off()"
    ]
   }
  ],
