--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -50,11 +50,11 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "load_data = True  # Set to False if data are huge and have already been loaded\n",
+    "load_data = False  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
-    "size = 5  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
-    "linklength = 5000  # m"
+    "size = 4  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
+    "linklength = 1000  # m"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gtype = \"tri\""
+    "gtype = \"grid\""
    ]
   },
   {
@@ -330,6 +330,7 @@
     "\n",
     "\n",
     "allloops_bound = {}\n",
+    "numloops_bound = 0\n",
     "for sourcenode in tqdm(allloops, desc=\"Restrict to scenario lengths\"):\n",
     "    try:\n",
     "        lengths_this = np.array(allloops[sourcenode][\"lengths\"] * MPERUNIT)\n",
@@ -339,9 +340,12 @@
     "        allloops_bound[sourcenode] = mask_node(\n",
     "            allloops[sourcenode], mask_this, [\"loops\", \"lengths\", \"numnodes\"]\n",
     "        )\n",
+    "        numloops_bound += np.count_nonzero(mask_this)\n",
     "    except:  # Account for 0 loop nodes\n",
     "        allloops_bound[sourcenode] = {}\n",
-    "Gnx_synth[gtype][\"allloops_bound\"] = allloops_bound"
+    "Gnx_synth[gtype][\"allloops_bound\"] = allloops_bound\n",
+    "Gnx_synth[gtype][\"numloops_bound\"] = numloops_bound\n",
+    "print(\"Found \" + str(numloops_bound) + \" loops for scenario\")"
    ]
   },
   {
