Get all loops, systematically

--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -30,7 +30,7 @@
     "## To do\n",
     "- [X] Bring into same data format as real networks\n",
     "- [X] Calculate linklength vs face loops (just 3*, 4*, 6* ranges)\n",
-    "- [ ] Analyze: size/linklength vs loops, correspondence with scenarios\n",
+    "- [X] Analyze: size/linklength vs loops, correspondence with scenarios\n",
     "- [ ] Analyze: border effects"
    ]
   },
@@ -53,7 +53,7 @@
     "load_data = False  # Set to False if data are huge and have already been loaded\n",
     "debug = True  # Set to True for extra plots and verbosity\n",
     "\n",
-    "size = 4  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
+    "gsize_set = 4  # number of nodes in each dimension. Networks will have ~size^2 nodes.\n",
     "linklength = 1000  # m"
    ]
   },
@@ -203,29 +203,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for gtype in Gnx_synth:\n",
-    "    Gnx_synth[gtype][\"Gnx\"] = Gnx_synth[gtype][\"constructor\"](size, size)\n",
-    "    if gtype == \"grid\":\n",
-    "        pos = dict(\n",
-    "            zip(Gnx_synth[gtype][\"Gnx\"], Gnx_synth[gtype][\"Gnx\"])\n",
-    "        )  # Source: https://stackoverflow.com/a/37106552\n",
-    "        nx.set_node_attributes(Gnx_synth[gtype][\"Gnx\"], pos, \"pos\")\n",
-    "    nx.set_edge_attributes(Gnx_synth[gtype][\"Gnx\"], linklength, name=\"weight\")\n",
+    "for gsize in range(2, 11):\n",
+    "    for gtype in Gnx_synth:\n",
+    "        Gnx_synth[gtype][gsize] = {}\n",
+    "        Gnx_synth[gtype][gsize][\"Gnx\"] = Gnx_synth[gtype][\"constructor\"](gsize, gsize)\n",
+    "        if gtype == \"grid\":\n",
+    "            pos = dict(\n",
+    "                zip(Gnx_synth[gtype][gsize][\"Gnx\"], Gnx_synth[gtype][gsize][\"Gnx\"])\n",
+    "            )  # Source: https://stackoverflow.com/a/37106552\n",
+    "            nx.set_node_attributes(Gnx_synth[gtype][gsize][\"Gnx\"], pos, \"pos\")\n",
+    "        nx.set_edge_attributes(\n",
+    "            Gnx_synth[gtype][gsize][\"Gnx\"], linklength, name=\"weight\"\n",
+    "        )\n",
     "\n",
-    "    # Scale by linklength\n",
-    "    nx.set_node_attributes(\n",
-    "        Gnx_synth[gtype][\"Gnx\"],\n",
-    "        {\n",
-    "            k: (linklength * v[0], linklength * v[1])\n",
-    "            for (k, v) in nx.get_node_attributes(Gnx_synth[gtype][\"Gnx\"], \"pos\").items()\n",
-    "        },\n",
-    "        \"pos\",\n",
-    "    )\n",
+    "        # Scale by linklength\n",
+    "        nx.set_node_attributes(\n",
+    "            Gnx_synth[gtype][gsize][\"Gnx\"],\n",
+    "            {\n",
+    "                k: (linklength * v[0], linklength * v[1])\n",
+    "                for (k, v) in nx.get_node_attributes(\n",
+    "                    Gnx_synth[gtype][gsize][\"Gnx\"], \"pos\"\n",
+    "                ).items()\n",
+    "            },\n",
+    "            \"pos\",\n",
+    "        )\n",
     "\n",
-    "    # momepy format\n",
-    "    Gnx_synth[gtype][\"nodes\"], Gnx_synth[gtype][\"links\"] = synthnx_to_momepy(\n",
-    "        Gnx_synth[gtype][\"Gnx\"]\n",
-    "    )"
+    "        # momepy format\n",
+    "        (\n",
+    "            Gnx_synth[gtype][gsize][\"nodes\"],\n",
+    "            Gnx_synth[gtype][gsize][\"links\"],\n",
+    "        ) = synthnx_to_momepy(Gnx_synth[gtype][gsize][\"Gnx\"])"
    ]
   },
   {
@@ -235,20 +242,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gsize = gsize_set\n",
     "if debug:\n",
     "    fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
     "    for i, gtype in enumerate(Gnx_synth):\n",
     "        nx.draw(\n",
-    "            Gnx_synth[gtype][\"Gnx\"],\n",
-    "            pos=nx.get_node_attributes(Gnx_synth[gtype][\"Gnx\"], \"pos\"),\n",
+    "            Gnx_synth[gtype][gsize][\"Gnx\"],\n",
+    "            pos=nx.get_node_attributes(Gnx_synth[gtype][gsize][\"Gnx\"], \"pos\"),\n",
     "            ax=axs[i],\n",
     "            node_size=8,\n",
     "        )\n",
     "\n",
     "fig, axs = plt.subplots(1, 3, figsize=(9, 3))\n",
     "for i, gtype in enumerate(Gnx_synth):\n",
-    "    Gnx_synth[gtype][\"nodes\"].plot(ax=axs[i])\n",
-    "    Gnx_synth[gtype][\"links\"].plot(ax=axs[i])\n",
+    "    Gnx_synth[gtype][gsize][\"nodes\"].plot(ax=axs[i])\n",
+    "    Gnx_synth[gtype][gsize][\"links\"].plot(ax=axs[i])\n",
     "    axs[i].set_axis_off()"
    ]
   },
@@ -257,7 +265,7 @@
    "id": "1c51bca5-ce82-493b-8f8f-11ee78758b48",
    "metadata": {},
    "source": [
-    "## Get all loops"
+    "## Get all loops, for one case"
    ]
   },
   {
@@ -277,9 +285,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Gnx = Gnx_synth[gtype][\"Gnx\"]\n",
-    "Gnx_nodes = Gnx_synth[gtype][\"nodes\"]\n",
-    "Gnx_links = Gnx_synth[gtype][\"links\"]"
+    "gsize = gsize_set\n",
+    "Gnx = Gnx_synth[gtype][gsize][\"Gnx\"]\n",
+    "Gnx_nodes = Gnx_synth[gtype][gsize][\"nodes\"]\n",
+    "Gnx_links = Gnx_synth[gtype][gsize][\"links\"]"
    ]
   },
   {
@@ -294,7 +303,7 @@
     "nodes_done = set()\n",
     "numloops = 0\n",
     "allloops_generator = nx.simple_cycles(\n",
-    "    Gnx_synth[gtype][\"Gnx\"], length_bound=LOOP_NUMNODE_BOUND\n",
+    "    Gnx_synth[gtype][gsize][\"Gnx\"], length_bound=LOOP_NUMNODE_BOUND\n",
     ")  # length refers to number of nodes\n",
     "for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
     "    sourcenode = c[0]\n",
@@ -325,8 +334,8 @@
     "    + str(LOOP_NUMNODE_BOUND)\n",
     "    + llb_string\n",
     ")\n",
-    "Gnx_synth[gtype][\"alloops\"] = allloops\n",
-    "Gnx_synth[gtype][\"numloops\"] = numloops\n",
+    "Gnx_synth[gtype][gsize][\"alloops\"] = allloops\n",
+    "Gnx_synth[gtype][gsize][\"numloops\"] = numloops\n",
     "\n",
     "\n",
     "allloops_bound = {}\n",
@@ -343,8 +352,8 @@
     "        numloops_bound += np.count_nonzero(mask_this)\n",
     "    except:  # Account for 0 loop nodes\n",
     "        allloops_bound[sourcenode] = {}\n",
-    "Gnx_synth[gtype][\"allloops_bound\"] = allloops_bound\n",
-    "Gnx_synth[gtype][\"numloops_bound\"] = numloops_bound\n",
+    "Gnx_synth[gtype][gsize][\"allloops_bound\"] = allloops_bound\n",
+    "Gnx_synth[gtype][gsize][\"numloops_bound\"] = numloops_bound\n",
     "print(\"Found \" + str(numloops_bound) + \" loops for scenario\")"
    ]
   },
@@ -358,7 +367,9 @@
    "outputs": [],
    "source": [
     "# Plot all bounded loops\n",
-    "vertex_size, vertex_color = get_vertex_plotinfo(Gnx_synth[gtype][\"allloops_bound\"])\n",
+    "vertex_size, vertex_color = get_vertex_plotinfo(\n",
+    "    Gnx_synth[gtype][gsize][\"allloops_bound\"]\n",
+    ")\n",
     "\n",
     "fig = plt.figure(\n",
     "    figsize=(0.3 * 640 / PLOTPARAM[\"dpi\"], 0.3 * 640 / PLOTPARAM[\"dpi\"]),\n",
@@ -367,8 +378,8 @@
     "ax = fig.add_axes(\n",
     "    [-0.03, -0.03, 1.06, 1.06]\n",
     ")  # negative because plot() introduces a padding\n",
-    "if Gnx_synth[gtype][\"nodes\"] is not None:\n",
-    "    Gnx_synth[gtype][\"nodes\"].plot(\n",
+    "if Gnx_synth[gtype][gsize][\"nodes\"] is not None:\n",
+    "    Gnx_synth[gtype][gsize][\"nodes\"].plot(\n",
     "        ax=ax,\n",
     "        zorder=1,\n",
     "        markersize=vertex_size,\n",
@@ -377,11 +388,50 @@
     "        edgecolor=PLOTPARAM[\"color\"][\"neutral\"],\n",
     "        linewidth=0.6,\n",
     "    )\n",
-    "Gnx_synth[gtype][\"links\"].plot(\n",
+    "Gnx_synth[gtype][gsize][\"links\"].plot(\n",
     "    ax=ax, zorder=0, linewidth=0.3, color=PLOTPARAM[\"color\"][\"neutral\"]\n",
     ")\n",
     "\n",
     "ax.set_axis_off()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6158f773-73db-4710-8d4c-46c4f2187d6e",
+   "metadata": {},
+   "source": [
+    "## Get all loop numbers, systematically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4e952a9-5496-44fc-8249-e3880ede7b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sysruns = {\"gsizes\": [3, 4, 5], \"gtypes\": [\"tri\", \"grid\"], \"linklengths\": [1000, 5000]}\n",
+    "sysresults = {}\n",
+    "sysruns_single = list(product(*sysruns.values()))\n",
+    "for gsize, gtype, linklength in sysruns_single:\n",
+    "    print(gsize, gtype, linklength)\n",
+    "    Gnx = Gnx_synth[gtype][gsize][\"Gnx\"]\n",
+    "    numloops = 0\n",
+    "    allloops_generator = nx.simple_cycles(\n",
+    "        Gnx, length_bound=LOOP_NUMNODE_BOUND\n",
+    "    )  # length refers to number of nodes\n",
+    "    for c in tqdm(allloops_generator, desc=\"Generate all loops\"):\n",
+    "        sourcenode = c[0]\n",
+    "        c_length = get_loop_length(c)\n",
+    "        if (\n",
+    "            c_length * MPERUNIT >= SCENARIO[SCENARIOID][\"looplength_min\"]\n",
+    "            and c_length * MPERUNIT <= SCENARIO[SCENARIOID][\"looplength_max\"]\n",
+    "        ):\n",
+    "            for sourcenode in c:\n",
+    "                numloops += 1\n",
+    "    sysresults[gsize, gtype, linklength] = numloops\n",
+    "\n",
+    "sysresults"
    ]
   }
  ],
