Add nx lattice source

--- a/code/04_synthetic_network_analysis.ipynb
+++ b/code/04_synthetic_network_analysis.ipynb
@@ -192,6 +192,7 @@
     "    \"tri\": {\"constructor\": nx.triangular_lattice_graph},\n",
     "    \"grid\": {\"constructor\": nx.grid_2d_graph},\n",
     "    # To do: Add staggered grid (all degree 3 nodes)\n",
+    "    # Inspiration: https://github.com/networkx/networkx/blob/478183cb7c692a82dd529c58f20d05a17b271242/networkx/generators/lattice.py#L37\n",
     "    \"hex\": {\"constructor\": nx.hexagonal_lattice_graph},\n",
     "}"
    ]
