Add format plot parameter
Add faceloop_limit_max parameter

--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -78,11 +78,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9b986890-413c-43c3-a6fa-57ff87899f25",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Running scenario in \" + STUDY_AREA)\n",
@@ -224,7 +220,7 @@
     "    link_color=\"#444444\",\n",
     ")\n",
     "plot_dk_inset(fig, allloops)\n",
-    "fig.savefig(PATH[\"plot\"] + \"network_numloops_all\")"
+    "fig.savefig(PATH[\"plot\"] + \"network_numloops_all\" + \".\" + PLOTPARAM[\"format\"])"
    ]
   },
   {
@@ -289,6 +285,8 @@
     "    + str(SCENARIO[SCENARIOID][\"looplength_min\"])\n",
     "    + \"to\"\n",
     "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
+    "    + \".\"\n",
+    "    + PLOTPARAM[\"format\"]\n",
     ")"
    ]
   },
@@ -358,6 +356,8 @@
     "    + str(SCENARIO[SCENARIOID][\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
     "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
+    "    + \".\"\n",
+    "    + PLOTPARAM[\"format\"]\n",
     ")"
    ]
   },
@@ -445,6 +445,8 @@
     "    + str(SCENARIO[SCENARIOID][\"maxslope_limit\"])\n",
     "    + \"_waterlength_max\"\n",
     "    + str(WATERLENGTH_MAX)\n",
+    "    + \".\"\n",
+    "    + PLOTPARAM[\"format\"]\n",
     ")"
    ]
   },
@@ -519,6 +521,8 @@
     "    + \"_waterlength_max\"\n",
     "    + str(WATERLENGTH_MAX)\n",
     "    + \"_poidiversity3\"\n",
+    "    + \".\"\n",
+    "    + PLOTPARAM[\"format\"]\n",
     ")"
    ]
   }
