comment on simple_cycles implemented in igraph
since igraph 0.11.9

--- a/code/01DK_create_loops.ipynb
+++ b/code/01DK_create_loops.ipynb
@@ -68,8 +68,7 @@
    "outputs": [],
    "source": [
     "%run -i setup_parameters.py\n",
-    "debug = True  # Set to True for extra plots and verbosity\n",
-    "layout_mode = \"combined\""
+    "debug = True  # Set to True for extra plots and verbosity"
    ]
   },
   {
@@ -128,7 +127,7 @@
    "outputs": [],
    "source": [
     "nodes = gpd.GeoDataFrame(columns=[\"nodeID\", \"id_cykelknudepkt\", \"geometry\"])\n",
-    "for i, v in enumerate(G.vs()):\n",
+    "for i, v in enumerate(G_new.vs()):\n",
     "    nodes.loc[v.index] = (v.index, v[\"id_cykelknudepkt\"], shapely.Point(v[\"x\"], v[\"y\"]))\n",
     "nodes.head(10)"
    ]
@@ -236,13 +235,17 @@
    "id": "c8f07b37",
    "metadata": {},
    "source": [
-    "Getting all simple loops has not yet been implemented in igraph, see:  \n",
+    "~~Getting all simple loops has not yet been implemented in igraph, see:  \n",
     "* https://github.com/igraph/igraph/issues/379  \n",
     "* https://github.com/igraph/igraph/issues/1398  \n",
     "Some potential progress here, but only for C, not Python:\n",
     "* https://github.com/igraph/igraph/pull/2181\n",
     "\n",
-    "But they can be XORed through the loop base.  "
+    "But they can be XORed through the loop base.~~\n",
+    "\n",
+    "Update 2025-06-19: It *has* been implemented now! 🎉  \n",
+    "https://github.com/igraph/python-igraph/releases/tag/0.11.9  \n",
+    "https://python.igraph.org/en/0.11.9/api/igraph.GraphBase.html#simple_cycles  "
    ]
   },
   {
@@ -259,6 +262,22 @@
    "metadata": {},
    "source": [
     "Therefore, we do not use igraph's loop basis, but go ahead with networkX."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60b4c617-19ac-41d1-a35d-5bc81809127e",
+   "metadata": {},
+   "source": [
+    "### Get all loops via igraph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edecf076-35fd-4dd4-948b-135502040133",
+   "metadata": {},
+   "source": [
+    "to do"
    ]
   },
   {
