Fix node indexing bug with DK allloops

--- a/code/01DK_create_loops.ipynb
+++ b/code/01DK_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-10-25"
+    "Last modified: 2025-06-20"
    ]
   },
   {
@@ -120,31 +120,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1480602-c0d0-42be-9db8-c2bec177f4fd",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "nodes = gpd.GeoDataFrame(columns=[\"nodeID\", \"id_cykelknudepkt\", \"geometry\"])\n",
-    "for i, v in enumerate(G_new.vs()):\n",
-    "    nodes.loc[v.index] = (v.index, v[\"id_cykelknudepkt\"], shapely.Point(v[\"x\"], v[\"y\"]))\n",
-    "nodes.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "75797837-2c99-4865-a22d-3b674a894754",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "nodes_id = list(nodes.nodeID)\n",
-    "nodes_x = list(nodes.geometry.x)\n",
-    "nodes_y = list(nodes.geometry.y)\n",
-    "nodes_coords = list(zip(normalize_data(nodes_x), normalize_data(nodes_y)))"
+    "# just dummy files that must be saved due to copy paste from old code. eventually fix and remove.\n",
+    "nodes_id = list()\n",
+    "nodes_coords = list()"
    ]
   },
   {
@@ -295,9 +279,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get all loops, meaning a loop ABCA is counted also as ABCA, BCAB, and CABC\n",
+    "# Get all loops, meaning a loop ABCA is counted also as BCAB and CABC\n",
     "allloops = {}\n",
-    "nodes_done = set()\n",
+    "for nid in list(Gnx.nodes(data=False)):  # Initialize allloops\n",
+    "    allloops[nid] = {\n",
+    "        \"loops\": [],\n",
+    "        \"lengths\": [],\n",
+    "        \"numnodes\": [],\n",
+    "        \"max_slopes\": [],\n",
+    "        \"water_profile\": [],\n",
+    "        \"poi_diversity\": [],\n",
+    "    }\n",
+    "\n",
     "numloops = 0\n",
     "allloops_generator = nx.simple_cycles(\n",
     "    Gnx, length_bound=LOOP_NUMNODE_BOUND\n",
@@ -312,23 +305,12 @@
     "        c_poi_diversity = get_loop_poi_diversity(c)\n",
     "        for sourcenode in c:\n",
     "            numloops += 1\n",
-    "            if sourcenode in nodes_done:\n",
-    "                allloops[sourcenode][\"loops\"].append(c)\n",
-    "                allloops[sourcenode][\"lengths\"].append(c_length)\n",
-    "                allloops[sourcenode][\"numnodes\"].append(len(c))\n",
-    "                allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
-    "                allloops[sourcenode][\"water_profile\"].append(c_water)\n",
-    "                allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
-    "            else:\n",
-    "                allloops[sourcenode] = {\n",
-    "                    \"loops\": [c],\n",
-    "                    \"lengths\": [c_length],\n",
-    "                    \"numnodes\": [len(c)],\n",
-    "                    \"max_slopes\": [c_max_slope],\n",
-    "                    \"water_profile\": [c_water],\n",
-    "                    \"poi_diversity\": [c_poi_diversity],\n",
-    "                }\n",
-    "                nodes_done.add(sourcenode)\n",
+    "            allloops[sourcenode][\"loops\"].append(c)\n",
+    "            allloops[sourcenode][\"lengths\"].append(c_length)\n",
+    "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
+    "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
+    "            allloops[sourcenode][\"water_profile\"].append(c_water)\n",
+    "            allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
     "if LOOP_LENGTH_BOUND:\n",
     "    llb_string = \" and length bound \" + str(LOOP_LENGTH_BOUND) + \"m\"\n",
     "else:\n",
