--- a/code/03DK_scenario_analysis.ipynb
+++ b/code/03DK_scenario_analysis.ipynb
@@ -22,7 +22,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-25  \n",
-    "Last modified: 2024-10-25"
+    "Last modified: 2025-06-20"
    ]
   },
   {
@@ -187,25 +187,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b38cb593-9592-4296-bab5-764260c6666e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if debug:\n",
-    "    print(len(nodes), len(allloops))\n",
-    "if len(nodes) > len(allloops):  # Some nodes have no loops. Add them to allloops\n",
-    "    for i in range(len(list(nodes.index))):\n",
-    "        if i not in allloops:\n",
-    "            allloops[i] = {}\n",
-    "            print(\"Node \" + str(i) + \" has no loops\")\n",
-    "    print(\"Fixed\", len(nodes), len(allloops))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "14580a92-4d3b-45df-8c0b-0152f3224923",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Plot all loops\n",
