Fix node indexing bug, followup

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -602,12 +602,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9a4d6187-635f-4690-9e75-160ece98990f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops[0].values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7c7cafa7-ff1d-4964-8673-b1f97568146e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloopavglengths = [sum(v[\"lengths\"]) / len(v[\"lengths\"]) for v in allloops.values()]\n",
-    "allloopmedianlengths = [median(v[\"lengths\"]) for v in allloops.values()]"
+    "allloopavglengths = [\n",
+    "    sum(v[\"lengths\"]) / len(v[\"lengths\"]) if len(v[\"lengths\"]) != 0 else 0\n",
+    "    for v in allloops.values()\n",
+    "]\n",
+    "allloopmedianlengths = [\n",
+    "    median(v[\"lengths\"]) if len(v[\"lengths\"]) != 0 else 0 for v in allloops.values()\n",
+    "]"
    ]
   },
   {
