Add correlations between basic properties

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-10-28"
+    "Last modified: 2025-06-20"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "- [X] Plot distrib of length of loops that have nodes == loop_numnode_bound. To see whether we should increase the bound.\n",
     "- [X] Visualize link lengths (conforming/non-conforming)\n",
     "- [ ] Possibly refactor plotting code cells as one function\n",
-    "- [ ] Correlations between all basic properties, especially: faceloop length vs avgslope, link length vs max/avgslope"
+    "- [X] Correlations between all basic properties, especially: faceloop length vs avgslope, link length vs max/avgslope"
    ]
   },
   {
@@ -597,16 +597,6 @@
    "metadata": {},
    "source": [
     "### Average/median loop length per node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a4d6187-635f-4690-9e75-160ece98990f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "allloops[0].values()"
    ]
   },
   {
@@ -1388,6 +1378,122 @@
     "axes.set_xlim([0, xmax + 1])\n",
     "\n",
     "fig.savefig(PATH[\"plot\"] + \"poidiversities\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06b4a2bd-bc24-4d06-9122-150b165b8a4b",
+   "metadata": {},
+   "source": [
+    "## Correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e5216a6-8754-4d69-ba28-942284787ef2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poidiversities_np = np.array(poidiversities)\n",
+    "maxslopes_np = np.array(maxslopes)\n",
+    "linklengths_np = np.array(linklengths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77466612-6446-4f04-a4a5-b7643f85f37a",
+   "metadata": {},
+   "source": [
+    "### Max gradient versus POI Diversity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "626be0ae-556c-4c8d-b507-271ba723c9b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0, 0, 1, 1])\n",
+    "\n",
+    "# Plot data\n",
+    "axes.boxplot(\n",
+    "    [\n",
+    "        maxslopes_np[poidiversities_np == 0],\n",
+    "        maxslopes_np[poidiversities_np == 1],\n",
+    "        maxslopes_np[poidiversities_np == 2],\n",
+    "        maxslopes_np[poidiversities_np == 3],\n",
+    "    ]\n",
+    ")\n",
+    "axes.set_ylabel(\"Max gradient\")\n",
+    "axes.set_xticklabels([0, 1, 2, 3])\n",
+    "axes.set_xlabel(\"POI diversity\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71e87a26-17e2-4e42-8617-c9b279b603cd",
+   "metadata": {},
+   "source": [
+    "### Link length versus POI Diversity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04aa159e-c2b6-4e0f-b128-347e3eb34a25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0, 0, 1, 1])\n",
+    "\n",
+    "# Plot data\n",
+    "axes.boxplot(\n",
+    "    [\n",
+    "        linklengths_np[poidiversities_np == 0],\n",
+    "        linklengths_np[poidiversities_np == 1],\n",
+    "        linklengths_np[poidiversities_np == 2],\n",
+    "        linklengths_np[poidiversities_np == 3],\n",
+    "    ]\n",
+    ")\n",
+    "axes.set_ylabel(\"Link length\")\n",
+    "axes.set_xticklabels([0, 1, 2, 3])\n",
+    "axes.set_xlabel(\"POI diversity\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76c7073b-a8b2-4557-a68b-a5fa9ddd7023",
+   "metadata": {},
+   "source": [
+    "### Max gradient versus Link length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1799b47b-c747-49f2-a49d-f949f751f17b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "fig = plt.figure(figsize=(4, 3))\n",
+    "axes = fig.add_axes([0, 0, 1, 1])\n",
+    "\n",
+    "# Plot data\n",
+    "axes.scatter(linklengths_np, maxslopes_np)\n",
+    "\n",
+    "# Plot fit\n",
+    "slope, intercept, r_value, _, _ = stats.linregress(linklengths_np, maxslopes_np)\n",
+    "line = slope * linklengths_np + intercept\n",
+    "axes.plot(linklengths_np, line, linewidth=2.5, color=\"k\", label=\"Fit\")\n",
+    "\n",
+    "axes.set_xlabel(\"Link length\")\n",
+    "axes.set_ylabel(\"Maximum gradient\");"
    ]
   }
  ],
