Add hatching to vacuously too long face loops

--- a/code/02DK_basic_statistics.ipynb
+++ b/code/02DK_basic_statistics.ipynb
@@ -871,9 +871,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "58c8a123-0c54-4982-bb8f-a04c5e7fcf57",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Adapted from: scripts/script06.py\n",
@@ -889,6 +887,17 @@
     "        max_length=FACELOOP_LIMIT[2],\n",
     "    )\n",
     ")\n",
+    "\n",
+    "for faceloopid in [\n",
+    "    3272,\n",
+    "    2385,\n",
+    "    2220,\n",
+    "    2227,\n",
+    "    1874,\n",
+    "]:  # manually set lakes/fjords to too_long_vacuous\n",
+    "    loops.loc[\n",
+    "        faceloopid - 1, \"length_class\"\n",
+    "    ] = \"too_long_vacuous\"  # -1 due to zero-indexing\n",
     "\n",
     "loops.to_file(PATH[\"data_out\"] + f\"faceloops_length_classification.gpkg\", index=False)\n",
     "\n",
@@ -911,6 +920,17 @@
     "        edgecolor=\"#222222\",\n",
     "        aspect=1,\n",
     "        linewidth=0.2,\n",
+    "    )\n",
+    "for classification in [\"too_long_vacuous\"]:\n",
+    "    df = gpd.read_file(PATH[\"data_out\"] + f\"faceloops_{classification}.gpkg\")\n",
+    "    df.plot(\n",
+    "        ax=ax,\n",
+    "        color=PLOTPARAM[\"loop_classification_colors\"][classification],\n",
+    "        edgecolor=\"#222222\",\n",
+    "        aspect=1,\n",
+    "        linewidth=0.2,\n",
+    "        hatch=\"////\",\n",
+    "        # hatchcolor = \"#000000\" #doesn't work for some reason. update matplotlib?\n",
     "    )\n",
     "\n",
     "\n",
